--- a/analytics/templates/analytics/index.html
+++ b/analytics/templates/analytics/index.html
@@ -1,1 +1,11 @@
-<h1>Welcome to the Repo Performance Evaluation Analytics Tool</h1>
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Analytics Dashboard</title>
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+</head>
+<body>
+    <h1>Welcome to the Analytics Dashboard</h1>
+</body>
+</html>
