--- a/analytics/templates/analytics/index.html
+++ b/analytics/templates/analytics/index.html
@@ -6,4 +6,33 @@
 {% block content %}
     <h1>Welcome to the Analytics Dashboard</h1>
     <p>Here you’ll be able to visualize commit performance, CI results, and trends.</p>
+    {% if user.is_authenticated %}
+        <p>Hi {{ user.username }}!</p>
+        <p><a href="{% url 'password_change' %}">Password Change</a></p>
+        <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Log Out</button>
+        </form>
+    {% else %}
+        <p>You are not logged in</p>
+        <p><a href="{% url 'password_reset' %}">Password Reset</a></p>
+        <p><a href="{% url 'login' %}">Log In</a></p>
+    {% endif %}
+{% endblock %}
+
+<!-- templates/home.html -->
+
+{% block content %}
+{% if user.is_authenticated %}
+<p>Hi {{ user.username }}!</p>
+<p><a href="{% url 'password_change' %}">Password Change</a></p>
+<form action="{% url 'logout' %}" method="post">
+    {% csrf_token %}
+    <button type="submit">Log Out</button>
+</form>
+{% else %}
+<p>You are not logged in</p>
+<p><a href="{% url 'password_reset' %}">Password Reset</a></p>
+<p><a href="{% url 'login' %}">Log In</a></p>
+{% endif %}
 {% endblock %}
