--- a/analytics/templates/analytics/base.html
+++ b/analytics/templates/analytics/base.html
@@ -16,6 +16,9 @@
             <a href="{% url 'index' %}">Home</a>
             <a href="#">Reports</a>
             <a href="#">Settings</a>
+            <button type="Log In" href="registration\login.html">Log In</button>
+            <button type="Log Out">Log Out</button>
+            <button type="Sign Up" href="registration\signup.html">Sign Up</button>
         </div>
     </nav>
 
