login and signup authentocation

--- a/analytics/templates/analytics/base.html
+++ b/analytics/templates/analytics/base.html
@@ -10,10 +10,10 @@
 <body>
     <nav class="navbar">
         <div class="navbar-left">
-            <a href="{% url 'index' %}" class="nav-logo">RepoPerformanceEval</a>
+            <a href="{% url 'signup' %}" class="nav-logo">RepoPerformanceEval</a>
         </div>
         <div class="navbar-right">
-            <a href="{% url 'index' %}">Home</a>
+            <a href="{% url 'signup' %}">Home</a>
             <a href="#">Reports</a>
             <a href="#">Settings</a>
             <button type="Log In" href="registration\login.html">Log In</button>
