--- a/analytics/templates/registration/login.html
+++ b/analytics/templates/registration/login.html
@@ -1,13 +1,19 @@
-﻿<!-- RepoPreformanceEval/analytics/templates/registration/login.html -->
-{% extends "base.html" %}
-
-{% block title %}Login{% endblock %}
-
+﻿{% extends "analytics/base.html" %}
+{% block title %}Log in{% endblock %}
 {% block content %}
-<h2>Log In</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Log In</button>
+<h2>Log in</h2>
+<form method="post" novalidate>
+  {% csrf_token %}
+  {{ form.non_field_errors }}
+  <div>
+    <label>Email</label>
+    {{ form.email }} {{ form.email.errors }}
+  </div>
+  <div>
+    <label>Password</label>
+    {{ form.password }} {{ form.password.errors }}
+  </div>
+  <button type="submit">Log in</button>
 </form>
+<p>Don’t have an account? <a href="{% url 'signup' %}">Sign up</a></p>
 {% endblock %}
