--- a/analytics/templates/analytics/base.html
+++ b/analytics/templates/analytics/base.html
@@ -10,15 +10,19 @@
 <body>
     <nav class="navbar">
         <div class="navbar-left">
-            <a href="{% url 'signup' %}" class="nav-logo">RepoPerformanceEval</a>
+            <a href="{% url 'home' %}" class="nav-logo">RepoPerformanceEval</a>
         </div>
         <div class="navbar-right">
-            <a href="{% url 'signup' %}">Home</a>
-            <a href="#">Reports</a>
-            <a href="#">Settings</a>
-            <button type="Log In" href="registration\login.html">Log In</button>
-            <button type="Log Out">Log Out</button>
-            <button type="Sign Up" href="registration\signup.html">Sign Up</button>
+            <a href="{% url 'home' %}">Home</a>
+            {% if sb_authenticated %}
+                <a href="{% url 'my_analyses' %}">My Analyses</a>
+                <form method="post" action="{% url 'logout' %}" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="nav-button">Log Out</button>
+                </form>
+            {% else %}
+                <a href="{% url 'login' %}">Log In</a>
+            {% endif %}
         </div>
     </nav>
 
